Testing JS changes
Testing JS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+<html>
+<head></head>
+<body>
+<script>alert("test");</script>
+<h1>Qury.info</h1>
+<p>Welcome to qury.info. Did you like the test?</p>
+</body>
+</html>
+
